# single_exchange_triangular_arbitrage_bot

./: .gitignore  CMakeLists.txt  readme.md  requirements.md
docs/: README.md
include/: common.hpp  gateway.hpp  orderbook.hpp  triarb_bot.hpp  websocket_session.hpp
src/: gateway.cpp  main.cpp  orderbook.cpp  triarb_bot.cpp  websocket_session.cpp
test/: arbitrage_test.cpp  orderbook_test.cpp
